// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`formatComment (GFM Markdown) snapshots must · req-1 · with line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 🎯 req-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · req-1 · without line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 🎯 req-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · req-2 · with line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 📋 req-2**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · req-2 · without line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 📋 req-2**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · logic-1 · with line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 🛡️ logic-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · logic-1 · without line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 🛡️ logic-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · logic-2 · with line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 🔒 logic-2**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · logic-2 · without line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 🔒 logic-2**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · arch-1 · with line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 🧩 arch-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots must · arch-1 · without line 1`] = `
{
  "body": 
"**🚨 must · 🐛 issue · 🧩 arch-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · req-1 · with line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 🎯 req-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · req-1 · without line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 🎯 req-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · req-2 · with line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 📋 req-2**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · req-2 · without line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 📋 req-2**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · logic-1 · with line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 🛡️ logic-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · logic-1 · without line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 🛡️ logic-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · logic-2 · with line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 🔒 logic-2**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · logic-2 · without line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 🔒 logic-2**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · arch-1 · with line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 🧩 arch-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots should · arch-1 · without line 1`] = `
{
  "body": 
"**⚠️ should · 🙋 question · 🧩 arch-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · req-1 · with line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 🎯 req-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · req-1 · without line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 🎯 req-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · req-2 · with line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 📋 req-2**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · req-2 · without line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 📋 req-2**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · logic-1 · with line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 🛡️ logic-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · logic-1 · without line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 🛡️ logic-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · logic-2 · with line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 🔒 logic-2**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · logic-2 · without line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 🔒 logic-2**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · arch-1 · with line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 🧩 arch-1**

**対象**: \`src/example.ts:42\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`formatComment (GFM Markdown) snapshots want · arch-1 · without line 1`] = `
{
  "body": 
"**💡 want · 🙋 question · 🧩 arch-1**

**対象**: \`src/example.ts\`

**詳細**:

サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。"
,
}
`;

exports[`buildDifitComments integration generates difit thread imports for mixed axes with and without line 1`] = `
[
  {
    "body": 
"**🚨 must · 🐛 issue · 🎯 req-1**

**対象**: \`src/a.ts:10\`

**詳細**:

essential must detail"
,
    "filePath": "src/a.ts",
    "position": {
      "line": 10,
      "side": "new",
    },
    "type": "thread",
  },
  {
    "body": 
"**🚨 must · 🐛 issue · 🧭 logic-3**

**対象**: \`src/d.ts:99\`

**詳細**:

align must <escape> & test"
,
    "filePath": "src/d.ts",
    "position": {
      "line": 99,
      "side": "new",
    },
    "type": "thread",
  },
]
`;
